@@ -520,6 +520,7 @@ Skipping default list.",
 	'config-insecure-keys'            => "'''Warning:''' {{PLURAL:$2|A secure key|Secure keys}} ($1) generated during installation {{PLURAL:$2|is|are}} not completely safe. Consider changing {{PLURAL:$2|it|them}} manually.",
 	'config-install-sysop'            => 'Creating administrator user account',
 	'config-install-subscribe-fail'   => 'Unable to subscribe to mediawiki-announce: $1',
+	'config-install-subscribe-notpossible' => 'cURL is not installed and allow_url_fopen is not available.',
 	'config-install-mainpage'         => 'Creating main page with default content',
 	'config-install-extension-tables' => 'Creating tables for enabled extensions',
 	'config-install-mainpage-failed'  => 'Could not insert main page: $1',
